Fixed missing background in downloaded images.

--- a/mistria/src/App.css
+++ b/mistria/src/App.css
@@ -7,11 +7,12 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   text-align: center;
   font-family: 'mistria';
   background-color: #F9EDF8;
-  border-color: #B6A7B7;
+  border: 4px solid #B6A7B7;
 }
 
 .grid-container {
