--- a/mistria/src/index.css
+++ b/mistria/src/index.css
@@ -5,7 +5,6 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  background-image: url("./assets/background.webp");
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,11 +19,13 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url("./assets/background.webp");
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 1.25em;
+  padding-top: 0;
+  margin-top: 0;
 }
 
 h2 {
